# cotefacil

./: .gitignore  README.md  ServimedSpider.py
level1/: README.md
level1/level1/: items.py  middlewares.py  pipelines.py  scrapy.cfg  settings.py
level1/level1/spiders/: servimed.py
level1/spiders/: servimed.py
level2/: .env.example  README.md  api_client.py  celery_config.py  client.py  crawler_runner.py  pyproject.toml  tasks.py
level2/scrapy_pp/: items.py  middlewares.py  pipelines.py  scrapy.cfg  settings.py
level2/scrapy_pp/spiders/: servimed.py
